cabal-version: 3.6
name:           tweetutils
version:        0.1.0.0
synopsis:       Delete tweets from the commandline using the Twitter API (via twitter-conduit)
description:    Please see the README on GitLab at <https://gitlab.com/t1lde/tweetdelete_hs#readme>
category:       Web
author:         Tilde Rose
maintainer:     t1lde@protonmail.com
copyright:      2022 Tilde Rose
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

common lang
  ghc-options: -Wall -Werror -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints 
  default-language: Haskell2010
  default-extensions: 
    EmptyCase 
    InstanceSigs 
    LambdaCase 
    MultiWayIf 
    NamedFieldPuns 
    TupleSections 
    BangPatterns 
    KindSignatures 
    TypeOperators 
    OverloadedStrings 
    ScopedTypeVariables 
    TypeApplications 
    ApplicativeDo 
    DeriveGeneric 
    DataKinds 
    DerivingVia 
    RecordWildCards 
    DeriveFunctor 
    DeriveTraversable 
    OverloadedLabels 
    FlexibleContexts

common deps
  build-depends:
      attoparsec
    , authenticate-oauth
    , base >=4.7 && <5
    , bytestring
    , conduit
    , conduit-extra
    , containers
    , lens
    , mtl
    , optparse-applicative
    , parallel-io
    , text
    , time
    , transformers
    , twitter-conduit
    , twitter-types
    , twitter-types-lens

library
  import: lang, deps
  exposed-modules:
      ApiOptions
      Auth
      Delete
      Lib
      Options
  hs-source-dirs:
      src

executable tweetdelete-exe
  import: lang, deps
  main-is: Main.hs
  other-modules:
      Cli.Cli
      Cli.Parse
      Cli.ParseDuration
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
