cabal-version: 3.6
name:           tweetutils
version:        0.1.0.0
synopsis:       Delete tweets from the commandline using the Twitter API (via twitter-conduit)
description:    Please see the README on GitLab at <https://gitlab.com/t1lde/tweetdelete_hs#readme>
category:       Web
author:         Tilde Rose
maintainer:     t1lde@protonmail.com
copyright:      2022 Tilde Rose
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

common lang
  ghc-options: -Wall -Werror -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints 
  default-language: Haskell2010
  default-extensions: 
    EmptyCase 
    InstanceSigs 
    LambdaCase 
    MultiWayIf 
    NamedFieldPuns 
    TupleSections 
    BangPatterns 
    KindSignatures 
    TypeOperators 
    OverloadedStrings 
    TypeFamilies
    ConstraintKinds
    ScopedTypeVariables 
    TypeApplications 
    ApplicativeDo 
    DeriveGeneric 
    DataKinds 
    DerivingVia
    GeneralizedNewtypeDeriving
    DerivingStrategies 
    RecordWildCards 
    DeriveFunctor 
    DeriveTraversable 
    OverloadedLabels 
    FlexibleContexts
    FlexibleInstances
    MultiParamTypeClasses
    UndecidableInstances
    ImportQualifiedPost
    AllowAmbiguousTypes
    UndecidableSuperClasses

common deps
  build-depends:
      attoparsec
    , authenticate-oauth
    , base >=4.7 && <5
    , bytestring
    , conduit
    , conduit-extra
    , containers
    , lens
    , mtl
    , optparse-applicative
    , parallel-io
    , text
    , time
    , transformers
    , twitter-conduit
    , twitter-types
    , twitter-types-lens
    , pandoc
    , pandoc-types
    , binary
    , http-types
    , aeson
    , data-default
    , directory
    , filepath

library
  import: lang, deps
  exposed-modules:
    TweetUtils.Commands.DeleteTweets
    TweetUtils.Commands.DumpTweets
    TweetUtils.Commands.GetAuth
    TweetUtils.MonadApp
    TweetUtils.Image
    TweetUtils.Options
    TweetUtils.Query
    TweetUtils.Render
  hs-source-dirs:
      tweet-utils

executable tweetutils-exe
  import: lang, deps
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: tweetutils
  main-is: Main.hs
  hs-source-dirs: app
  other-modules:
      Cli.Cli
      Cli.Parse
      Cli.ParseDuration
